[package]
name = "botplayer"
version = "6.3.0"
edition = "2021"
description = "General Bots media player"
license = "AGPL-3.0"
authors = ["Pragmatismo.com.br", "General Bots Community"]
repository = "https://github.com/GeneralBots/BotServer"

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
