[package]
name = "botqdrant"
version = "6.3.0"
edition = "2021"
description = "General Bots Qdrant vector database client"
license = "AGPL-3.0"
authors = ["Pragmatismo.com.br", "General Bots Community"]
repository = "https://github.com/GeneralBots/BotServer"

[features]
mail = []
default = []

[dependencies]
anyhow = { workspace = true }
botcore = { workspace = true }
botlib = { workspace = true }
chrono = { workspace = true, features = ["clock", "std", "serde"] }
diesel = { workspace = true, features = ["postgres", "uuid", "chrono", "serde_json", "r2d2", "numeric", "32-column-tables"] }
log = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls", "json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt", "fs"] }
uuid = { workspace = true, features = ["v4", "serde"] }
zip = { workspace = true }

[lints]
workspace = true
