[package]
name = "botresearch"
version = "6.3.0"
edition = "2021"
description = "Research module for General Bots - web search, knowledge base exploration, and deep research"
license = "AGPL-3.0"
authors = ["Pragmatismo.com.br", "General Bots Community"]
repository = "https://github.com/GeneralBots/BotServer"
keywords = ["bot", "research", "search", "web-search", "knowledge-base"]
categories = ["api-bindings", "web-programming"]

[dependencies]
botlib = { workspace = true, features = ["database"] }
axum = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
diesel = { workspace = true, features = ["postgres", "r2d2"] }
log = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls", "json"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
serde_json = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }

[lints]
workspace = true
